# adzan-reminder

./: CLAUDE.md  Cargo.toml  Cross.toml  README.md  adzan.rb  build.rs  install.sh  test_alignment.rs  test_pixel.rs  test_rodio.rs  uninstall.sh
.github/workflows/: check.yml  release.yml
assets/: message.json  mosque.icns
menubar/: AppDelegate.swift  SocketReader.swift  build.sh  main.swift
src/: config.rs  error.rs  i18n.rs  lib.rs  main.rs  prayer_time.rs
src/app/: services.rs
src/domain/: entities.rs  mod.rs
src/helpers/: mod.rs  notification.rs  quotes.rs  serde_helpers.rs
src/infra/: mock_repository.rs  mod.rs
src/ui/: app.rs  mod.rs  render.rs
