[package]
name = "adzan"
version = "0.2.9"
description = "Aplikasi reminder jadwal sholat untuk Linux & macOS"
authors = ["Ismail Nur Alam <ismailnuralam@gmail.com>"]
edition = "2021"
license = "MIT"                                                     # atau "Apache-2.0" atau "MIT OR Apache-2.0"
repository = "https://github.com/itzmail/adzan-reminder"
homepage = "https://github.com/itzmail/adzan-reminder"
readme = "README.md"
keywords = ["adzan", "prayer", "islamic", "reminder"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "adzan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.28", features = ["json"] }
chrono = "0.4.42"
thiserror = "2.0.17"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["macros", "rt", "time"] }
console = "0.16.2"
confy = "2.0.0"
fuzzy-matcher = "0.3.7"
rodio = "0.21.1"
dirs = "6.0.0"
atty = "0.2.14"
rand = "0.8.5"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tui-big-text = "0.7.1"
self_update = { version = "0.43.1", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "rustls",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
mockall = "0.14.0"

[package.metadata]
cargo-build = { copy = ["assets/**"] }
